Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15117

ofd_read_lock vs transaction deadlock while allocating buffers

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      PID: 154236  TASK: ffff9ab9b2f330c0  CPU: 9   COMMAND: "ll_ost_io01_002"
       #0 [ffff9ab9b2f6af58] __schedule at ffffffff9876ab17
       #1 [ffff9ab9b2f6afe0] schedule at ffffffff9876b019
       #2 [ffff9ab9b2f6aff0] wait_transaction_locked at ffffffffc0760085 [jbd2]
       #3 [ffff9ab9b2f6b048] add_transaction_credits at ffffffffc0760368 [jbd2]
       #4 [ffff9ab9b2f6b0a8] start_this_handle at ffffffffc07605e1 [jbd2]
       #5 [ffff9ab9b2f6b140] jbd2__journal_start at ffffffffc0760a93 [jbd2]
       #6 [ffff9ab9b2f6b188] __ldiskfs_journal_start_sb at ffffffffc19c1c79 [ldiskfs]
       #7 [ffff9ab9b2f6b1c8] ldiskfs_release_dquot at ffffffffc19b92ec [ldiskfs]
       #8 [ffff9ab9b2f6b1e8] dqput at ffffffff982aeb5d
       #9 [ffff9ab9b2f6b210] __dquot_drop at ffffffff982b0215
      #10 [ffff9ab9b2f6b248] dquot_drop at ffffffff982b0285
      #11 [ffff9ab9b2f6b258] ldiskfs_clear_inode at ffffffffc19bdcf2 [ldiskfs]
      #12 [ffff9ab9b2f6b270] ldiskfs_evict_inode at ffffffffc19dccdf [ldiskfs]
      #13 [ffff9ab9b2f6b2b0] evict at ffffffff9825ee14
      #14 [ffff9ab9b2f6b2d8] dispose_list at ffffffff9825ef1e
      #15 [ffff9ab9b2f6b300] prune_icache_sb at ffffffff9825ff2c
      #16 [ffff9ab9b2f6b368] prune_super at ffffffff98244323
      #17 [ffff9ab9b2f6b3a0] shrink_slab at ffffffff981ca105
      #18 [ffff9ab9b2f6b440] do_try_to_free_pages at ffffffff981cd3c2
      #19 [ffff9ab9b2f6b4b8] try_to_free_pages at ffffffff981cd5dc
      #20 [ffff9ab9b2f6b550] __alloc_pages_slowpath at ffffffff987601ef
      #21 [ffff9ab9b2f6b640] __alloc_pages_nodemask at ffffffff981c1465
      #22 [ffff9ab9b2f6b6f0] alloc_pages_current at ffffffff9820e2c8
      #23 [ffff9ab9b2f6b738] new_slab at ffffffff982192d5
      #24 [ffff9ab9b2f6b770] ___slab_alloc at ffffffff9821ad4c
      #25 [ffff9ab9b2f6b840] __slab_alloc at ffffffff9876160c
      #26 [ffff9ab9b2f6b880] kmem_cache_alloc at ffffffff9821c3eb
      #27 [ffff9ab9b2f6b8c0] __radix_tree_preload at ffffffff9837b7b9
      #28 [ffff9ab9b2f6b8f0] radix_tree_maybe_preload at ffffffff9837bd0e
      #29 [ffff9ab9b2f6b900] __add_to_page_cache_locked at ffffffff981b734a
      #30 [ffff9ab9b2f6b940] add_to_page_cache_lru at ffffffff981b74b7
      #31 [ffff9ab9b2f6b970] find_or_create_page at ffffffff981b783e
      #32 [ffff9ab9b2f6b9b0] osd_bufs_get at ffffffffc1a773c3 [osd_ldiskfs]
      #33 [ffff9ab9b2f6ba10] ofd_preprw_write at ffffffffc144f156 [ofd]
      #34 [ffff9ab9b2f6ba90] ofd_preprw at ffffffffc14500ce [ofd]
      #35 [ffff9ab9b2f6bb28] tgt_brw_write at ffffffffc0ece6e9 [ptlrpc]
      #36 [ffff9ab9b2f6bca0] tgt_request_handle at ffffffffc0eccd4a [ptlrpc]
      #37 [ffff9ab9b2f6bd30] ptlrpc_server_handle_request at ffffffffc0e72586 [ptlrpc]
      #38 [ffff9ab9b2f6bde8] ptlrpc_main at ffffffffc0e7625a [ptlrpc]
      #39 [ffff9ab9b2f6bec8] kthread at ffffffff980c1f81
      #40 [ffff9ab9b2f6bf50] ret_from_fork_nospec_begin at ffffffff98777c1d
      

        1. st_vmcore
          84 kB
          Andriy Skulysh
        2. fir-io7-s1_crash_foreach_bt_20220831.log
          1.60 MB
          Stephane Thiell

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: